# uc-intg-xbox-live

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entry.sh  driver.json  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
uc_intg_xbox_live/: __init__.py  auth.py  config.py  driver.py  media_player_entity.py  setup.py
