[project]
name = "uc_intg_xbox_live"
version = "2.0.3"
description = "An Unfolded Circle integration to display Xbox Live game presence."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Meir Miyara" }
]
# ... inside [project]
dependencies = [
    "ucapi==0.3.1",
    "xbox-webapi==2.1.0",
    "httpx",
    "certifi"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"